# GALES-multi-fluid

./: .gitignore  LICENSE  README.md
sim/fluid_mc/N10/: CMakeLists.txt  clear  fluid_ic_bc.hpp  main.cpp  run.sh
sim/fluid_mc/N15/: build  fluid_updater.hpp  main.cpp  props.txt
sim/fluid_mc/N5/: fluid_dofs_ic_bc.hpp  main.cpp
sim/fluid_mc/P0/: executable  fluid_assembly.hpp  main.cpp  props.txt
sim/fluid_mc/P3.5/: main.cpp  props.txt
sim/fluid_mc/P5/: fluid_2d.hpp  setup.txt
sim/fluid_mc/P6.5/: main.cpp  props.txt
src/fem/: fem.hpp
src/fem/base/: BASE_DIR.hpp  algorithm.hpp  io.hpp  mpi_functions.hpp  print_tools.hpp  read_setup.hpp  time.hpp
src/fem/dofs/: DOFS_DIR.hpp  dof_state.hpp  maps.hpp  model.hpp
src/fem/ls/: LS_DIR.hpp  amesos_linear_solver_factory.hpp  belos_linear_solver_factory.hpp  linear_system.hpp  residual_check.hpp  scatter.hpp
src/fem/mesh/: MESH_DIR.hpp  element.hpp  mesh.hpp  mesh_motion.hpp  node.hpp  point.hpp  quad.hpp  read_updated_nodes.hpp
src/fem/multiphysics_coupling/: COUPLING_DIR.hpp  f_heat_flux.hpp  f_tr.hpp  fsi_res_check.hpp  heat_eqn_T.hpp  s_uv.hpp
src/fem/physical_props/: PROPERTIES_DIR.hpp  props_sample.txt
src/fem/physical_props/adv_diff/: adv_diff_properties.hpp
src/fem/physical_props/fluid/: FLUID_PROPERTIES_DIR.hpp  GiordanoEtAlViscosityModel.hpp  base_chemical.hpp  base_mixture.hpp  chemicals.hpp  fluid_properties.hpp  fluid_properties_reader.hpp  mixtures.hpp  non_newtonian.hpp
src/fem/physical_props/heat_equation/: heat_eq_properties.hpp
src/fem/physical_props/solid/: SOLID_PROPERTIES_DIR.hpp  solid_properties.hpp  solid_properties_reader.hpp
src/fem/utils/: ICO_F_drag_lift.hpp  UTILS_DIR.hpp  adaptive_time_step.hpp  pressure_profile.hpp  secondary_dofs.hpp
tpl/: tpl.sh  tpl_ubuntu.sh
(+17 files in other folders)
